fix the JP button, which was too small

--- a/app/assets/stylesheets/log_in.css
+++ b/app/assets/stylesheets/log_in.css
@@ -64,4 +64,8 @@ a.jp_out_link{
   border-top:1px solid #e2e2e2
 }
 
+.btn{
+  width: 130% !important;
+}
+
 
